--- a/templates/index.html
+++ b/templates/index.html
@@ -23,10 +23,10 @@
 
 			<iframe id="offer-iframe"></iframe>
 
-			<p>...and add a <code>&lt;div&gt;</code> element with the id "comments"
+			<p>...and add a <code>&lt;div&gt;</code> element with the id "ss-comments"
 			where you want them to appear:</p>
 
-			<p><code>&lt;div id="comments" /&gt;</code></p>
+			<p><code>&lt;div id="ss-comments" /&gt;</code></p>
 
 			<p>Comments are tracked based on the url, so e.g. if you have blog posts
 			at each of</p>
