A bunch of stuff.
Core functionality is basically working, with a few (blocking) caveats:

* We're not setting the right permissions on the embed link. I haven't
  checked, but I suspect it can be used to gain admin access to the
  grain.
* I want to do stuff with sandstorm identity if possible; right now
  comments are basically anonymous, although we let folks fill in a
  nick.
* The UI is ugly as sin, and not terribly good otherwise.

--- a/templates/comments.html
+++ b/templates/comments.html
@@ -9,7 +9,7 @@
 <form id="ss-comments-form" action="/new-comment" method="POST">
 	<div>
 		<div>
-			<input id="ss-comments-author-input" name="author" placeholder="username" />
+			<input id="ss-comments-author-input" name="author" placeholder="nick name" />
 		</div>
 		<div>
 			<textarea id="ss-comments-body-input" name="body" placeholder="type your comment..."></textarea>
